--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
   </head>
   <body data-bs-theme="">
-    <script src="/includes/include.js"></script>
+    <script src="../includes/include.js"></script>
     <script>
         include('nav','nav');
         include('footer','footer');
