--- a/_pages/dashboard.html
+++ b/_pages/dashboard.html
@@ -21,11 +21,11 @@ permalink: /dashboard/
   <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <div class="alert alert-primary" role="alert">
-        <h2 class="h4 fw-bold">FYI from ProudCity ⭐</h2>
-        <ul>
-          <li><a href="https://proudcity.com/proudcity-named-to-2024-govtech-100-list/">ProudCity named to 2024 GovTech 100 list</a></li>
-          <li><a href="https://help.proudcity.com/iframes-embedded-content/">Embedded content</a></li>
-        </ul>
+        <h2 class="h4 fw-bold mb-2">FYI from ProudCity ⭐</h2>
+        <h3 class="h5 fw-bold">
+          <a href="https://proudcity.com/proudcity-named-to-2024-govtech-100-list/">ProudCity named to 2024 GovTech 100 list</a>
+        </h3>
+        <p>ProudCity is honored to be named to Government Technology’s esteemed 2024 GovTech 100 top government technology companies list.</p>
       </div>
     </div>
   </div>
@@ -39,7 +39,6 @@ permalink: /dashboard/
               Academy</h2>
           </div>
           <div class="card-body">
-
             <p>Training that helps advance your digital service and delivery skills.</p>
             <a
               href="https://proudcity.com/academy"
@@ -98,6 +97,24 @@ permalink: /dashboard/
               target="_blank"
               class="btn btn-primary">Payments</a>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+      <div class="card mb-3">
+        <div class="bg-primary px-3 py-2">
+          <h2 class="h6 card-title fw-bold text-white mb-0">
+            <i class="fa-solid fa-share-nodes" aria-hidden="true"></i>
+            Share</h2>
+        </div>
+        <div class="card-body">
+          <p>
+            Our primary source of new business is through word of mouth and referrals. We appreciate any support you can give us by sharing ProudCity to your network.
+          </p>
+          <a
+            href="{{ site.baseurl }}/share"
+            target="_blank"
+            class="btn btn-primary">Share</a>
         </div>
       </div>
     </div>
