Change share icon

--- a/_pages/dashboard.html
+++ b/_pages/dashboard.html
@@ -104,12 +104,16 @@ permalink: /dashboard/
       <div class="card mb-3">
         <div class="bg-primary px-3 py-2">
           <h2 class="h6 card-title fw-bold text-white mb-0">
-            <i class="fa-solid fa-share-nodes" aria-hidden="true"></i>
+            <i class="fa-solid fa-share" aria-hidden="true"></i>
             Share</h2>
         </div>
         <div class="card-body">
           <p>
             Our primary source of new business is through word of mouth and referrals. We appreciate any support you can give us by sharing ProudCity to your network.
+            <i
+              class="fa-solid fa-heart"
+              style="color: #e52207;"
+              aria-hidden="true"></i>
           </p>
           <a
             href="{{ site.baseurl }}/share"
