Add development page/widget
+ dashboard clean-up

--- a/_pages/dashboard.html
+++ b/_pages/dashboard.html
@@ -14,14 +14,17 @@ permalink: /dashboard/
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <div class="alert alert-warning" role="alert">
         <h2 class="h3 fw-bold">Say hello to your new dashboard! 👋</h2>
-        <p>We're just getting started, so expect more updates.</p>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="fw-bold h3 mb-3">FYI</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <div class="alert alert-primary" role="alert">
-        <h2 class="h4 fw-bold mb-2">FYI from ProudCity ⭐</h2>
         <h3 class="h5 fw-bold">
           <a href="https://proudcity.com/proudcity-named-to-2024-govtech-100-list/">ProudCity named to 2024 GovTech 100 list</a>
         </h3>
@@ -30,20 +33,30 @@ permalink: /dashboard/
     </div>
   </div>
   <div class="row">
-    <div class="card-group">
+    <div class="card-group mb-3">
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
         <div class="card mb-3">
           <div class="bg-primary px-3 py-2">
             <h2 class="h6 card-title fw-bold text-white mb-0">
-              <i class="fa-solid fa-certificate" aria-hidden="true"></i>
-              Academy</h2>
+              News</h2>
           </div>
           <div class="card-body">
-            <p>Training that helps advance your digital service and delivery skills.</p>
+            <p>Updates from ProudCity:</p>
+            <ul class="">
+              <li>
+                <a href="#">Post title</a>
+              </li>
+              <li>
+                <a href="#">Post title</a>
+              </li>
+              <li>
+                <a href="#">Post title</a>
+              </li>
+            </ul>
             <a
-              href="https://proudcity.com/academy"
+              href="https://proudcity.com/news"
               target="_blank"
-              class="btn btn-primary">Academy</a>
+              class="btn btn-primary">News</a>
           </div>
         </div>
       </div>
@@ -51,74 +64,180 @@ permalink: /dashboard/
         <div class="card mb-3">
           <div class="bg-primary px-3 py-2">
             <h2 class="h6 card-title fw-bold text-white mb-0">
-              <i class="fa-solid fa-broom" aria-hidden="true"></i>
-              Clean-up</h2>
+              Development</h2>
           </div>
           <div class="card-body">
-            <p>Data optimization services that keep your website performant.</p>
-            <a
-              href="https://proudcity.com/cleanup"
-              target="_blank"
-              class="btn btn-primary">Clean-up</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
-        <div class="card mb-3">
-          <div class="bg-primary px-3 py-2">
-            <h2 class="h6 card-title fw-bold text-white mb-0">
-              <i class="fa-solid fa-heart" aria-hidden="true"></i>
-              Help</h2>
-          </div>
-          <div class="card-body">
-            <p>
-              <a href="https://help.proudcity.com/support" target="_blank">Submit a support ticket</a>
-            </p>
-            <a
-              href="https://help.proudcity.com/"
-              target="_blank"
-              class="btn btn-primary">Help</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
-        <div class="card mb-3">
-          <div class="bg-primary px-3 py-2">
-            <h2 class="h6 card-title fw-bold text-white mb-0">
-              <i class="fa-solid fa-credit-card" aria-hidden="true"></i>
-              Payments</h2>
-          </div>
-          <div class="card-body">
-            <p>
-              Launch and manage your local government web and mobile payments.
-            </p>
-            <a
-              href="https://proudcity.com/payments"
-              target="_blank"
-              class="btn btn-primary">Payments</a>
+            <p>What we're working on right now:</p>
+            <ul class="list-unstyled">
+              <li>#2456:
+                <a href="#">Issue title</a>
+              </li>
+              <li>#2456:
+                <a href="#">Issue title</a>
+              </li>
+              <li>#2456:
+                <a href="#">Issue title</a>
+              </li>
+            </ul>
+            <a href="{{ site.baseurl }}/development" class="btn btn-primary">Development</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
-      <div class="card mb-3">
-        <div class="bg-primary px-3 py-2">
-          <h2 class="h6 card-title fw-bold text-white mb-0">
-            <i class="fa-solid fa-share" aria-hidden="true"></i>
-            Share</h2>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="fw-bold h3 mb-3">Training</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="card-group mb-3">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+        <div class="card mb-3">
+          <div class="bg-primary px-3 py-2">
+            <h2 class="h6 card-title fw-bold text-white mb-0">
+              ProudCity</h2>
+          </div>
+          <div class="card-body">
+            <p>Orientation and ProudCity 101 training for new users and folks who need a refresher.</p>
+            <a
+              href="https://proudcity.com/academy"
+              target="_blank"
+              class="btn btn-primary">ProudCity training</a>
+          </div>
         </div>
-        <div class="card-body">
-          <p>
-            Our primary source of new business is through word of mouth and referrals. We appreciate any support you can give us by sharing ProudCity to your network.
-            <i
-              class="fa-solid fa-heart"
-              style="color: #e52207;"
-              aria-hidden="true"></i>
-          </p>
-          <a
-            href="{{ site.baseurl }}/share"
-            target="_blank"
-            class="btn btn-primary">Share</a>
+      </div>
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+        <div class="card mb-3">
+          <div class="bg-primary px-3 py-2">
+            <h2 class="h6 card-title fw-bold text-white mb-0">
+              Plain language</h2>
+          </div>
+          <div class="card-body">
+            <p>Plain language training and support that helps local governments advance their digital service and delivery skills.</p>
+            <a
+              href="https://proudcity.com/plain-language"
+              target="_blank"
+              class="btn btn-primary">Plain language training</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="fw-bold h3 mb-3">Services</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="card-group mb-3">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+          <div class="card mb-3">
+            <div class="bg-primary px-3 py-2">
+              <h2 class="h6 card-title fw-bold text-white mb-0">
+                Clean-up</h2>
+            </div>
+            <div class="card-body">
+              <p>Data optimization that keep your website performant.</p>
+              <a
+                href="https://proudcity.com/cleanup"
+                target="_blank"
+                class="btn btn-primary">Clean-up</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+          <div class="card mb-3">
+            <div class="bg-primary px-3 py-2">
+              <h2 class="h6 card-title fw-bold text-white mb-0">
+                Review</h2>
+            </div>
+            <div class="card-body">
+              <p>
+                Sign up for recurring website assessments and consultation with actionable outcomes.
+              </p>
+              <a
+                href="https://proudcity.com/review"
+                target="_blank"
+                class="btn btn-primary">Review</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="fw-bold h3 mb-3">Help</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="card-group mb-3">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+          <div class="card mb-3">
+            <div class="bg-primary px-3 py-2">
+              <h2 class="h6 card-title fw-bold text-white mb-0">
+                Help center</h2>
+            </div>
+            <div class="card-body">
+              <p>
+                Online documentation for (almost everything) ProudCity.
+              </p>
+              <a
+                href="https://help.proudcity.com/"
+                target="_blank"
+                class="btn btn-primary">Help center</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+          <div class="card mb-3">
+            <div class="bg-primary px-3 py-2">
+              <h2 class="h6 card-title fw-bold text-white mb-0">
+                Support</h2>
+            </div>
+            <div class="card-body">
+              <p>
+                Can't find your answer in the help center?
+              </p>
+              <a
+                href="https://help.proudcity.com/support"
+                target="_blank"
+                class="btn btn-primary">Submit support ticket</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2 class="fw-bold h3 mb-3">Share</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="card-group mb-3">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
+        <div class="card mb-3">
+          <div class="bg-primary px-3 py-2">
+            <h2 class="h6 card-title fw-bold text-white mb-0">
+              Share</h2>
+          </div>
+          <div class="card-body">
+            <p>
+              Our primary source of new business is through word of mouth and referrals. We appreciate any support you can give us by sharing ProudCity to your network.
+              <i
+                class="fa-solid fa-heart"
+                style="color: #e52207;"
+                aria-hidden="true"></i>
+            </p>
+            <a
+              href="{{ site.baseurl }}/share"
+              target="_blank"
+              class="btn btn-primary">Share</a>
+          </div>
         </div>
       </div>
     </div>
