--- a/_pages/dashboard.html
+++ b/_pages/dashboard.html
@@ -19,12 +19,12 @@ permalink: /dashboard/
   </div>
   <div class="row">
     <div class="col-12">
-      <h2 class="fw-bold h3 mb-3">FYI</h2>
+      <h2 class="fw-bold h4 mb-3">FYI</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-      <div class="alert alert-primary" role="alert">
+      <div class="alert alert-primary mb-4" role="alert">
         <h3 class="h5 fw-bold">
           <a href="https://proudcity.com/proudcity-named-to-2024-govtech-100-list/">ProudCity named to 2024 GovTech 100 list</a>
         </h3>
@@ -32,17 +32,8 @@ permalink: /dashboard/
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="card-group mb-3">
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-3 text-center">
-              <i class="fa-solid fa-newspaper text-primary fa-5x p-3"></i>
-            </div>
-            <div class="col-md-9">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">News</h5>
+  <!--
+    <div class="row">  <div class="card-group mb-3">    <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">      <div class="card mb-3">        <div class="row g-0">          <div class="col-md-2 text-center">            <i class="fa-solid fa-newspaper text-primary fa-3x p-3"></i>          </div>          <div class="col-md-10">            <div class="card-body">              <h5 class="card-title fw-bold">News</h5>
                 <p class="card-text">Updates from ProudCity</p>
                 <ul class="list-unstyled">
                   <li>
@@ -67,10 +58,10 @@ permalink: /dashboard/
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-3 text-center">
-              <i class="fa-solid fa-code text-primary fa-5x p-3"></i>
+            <div class="col-md-2 text-center">
+              <i class="fa-solid fa-code text-primary fa-3x p-3"></i>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10">
               <div class="card-body">
                 <h5 class="card-title fw-bold">Development</h5>
                 <p class="card-text">What we're working on right now:</p>
@@ -93,9 +84,10 @@ permalink: /dashboard/
       </div>
     </div>
   </div>
+  -->
   <div class="row">
     <div class="col-12">
-      <h2 class="fw-bold h3 mb-3">Training</h2>
+      <h2 class="fw-bold h4 mb-3">Training</h2>
     </div>
   </div>
   <div class="row">
@@ -103,10 +95,10 @@ permalink: /dashboard/
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-3 text-center">
-              <i class="fa-solid fa-chalkboard text-primary fa-5x p-3"></i>
+            <div class="col-md-2 text-center">
+              <i class="fa-solid fa-chalkboard text-primary fa-3x p-3"></i>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10">
               <div class="card-body">
                 <h5 class="card-title fw-bold">ProudCity</h5>
                 <p class="card-text">Orientation and ProudCity 101 training for new users and folks who need a refresher.</p>
@@ -122,10 +114,10 @@ permalink: /dashboard/
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-3 text-center">
-              <i class="fa-solid fa-pen-square text-primary fa-5x p-3"></i>
+            <div class="col-md-2 text-center">
+              <i class="fa-solid fa-pen-square text-primary fa-3x p-3"></i>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10">
               <div class="card-body">
                 <h5 class="card-title fw-bold">Plain language</h5>
                 <p class="card-text">Plain language training and support that helps local governments advance their digital service and delivery skills.</p>
@@ -142,7 +134,7 @@ permalink: /dashboard/
   </div>
   <div class="row">
     <div class="col-12">
-      <h2 class="fw-bold h3 mb-3">Services</h2>
+      <h2 class="fw-bold h4 mb-3">Services</h2>
     </div>
   </div>
   <div class="row">
@@ -151,10 +143,10 @@ permalink: /dashboard/
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
           <div class="card mb-3">
             <div class="row g-0">
-              <div class="col-md-3 text-center">
-                <i class="fa-solid fa-broom text-primary fa-5x p-3"></i>
+              <div class="col-md-2 text-center">
+                <i class="fa-solid fa-broom text-primary fa-3x p-3"></i>
               </div>
-              <div class="col-md-9">
+              <div class="col-md-10">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Clean-up</h5>
                   <p class="card-text">Data optimization that keep your website performant.</p>
@@ -170,10 +162,10 @@ permalink: /dashboard/
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
           <div class="card mb-3">
             <div class="row g-0">
-              <div class="col-md-3 text-center">
-                <i class="fa-solid fa-chart-simple text-primary fa-5x p-3"></i>
+              <div class="col-md-2 text-center">
+                <i class="fa-solid fa-chart-simple text-primary fa-3x p-3"></i>
               </div>
-              <div class="col-md-9">
+              <div class="col-md-10">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Review</h5>
                   <p class="card-text">Sign up for recurring website assessments and consultation with actionable outcomes.</p>
@@ -191,7 +183,7 @@ permalink: /dashboard/
   </div>
   <div class="row">
     <div class="col-12">
-      <h2 class="fw-bold h3 mb-3">Help</h2>
+      <h2 class="fw-bold h4 mb-3">Help</h2>
     </div>
   </div>
   <div class="row">
@@ -200,10 +192,10 @@ permalink: /dashboard/
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
           <div class="card mb-3">
             <div class="row g-0">
-              <div class="col-md-3 text-center">
-                <i class="fa-solid fa-heart text-primary fa-5x p-3"></i>
+              <div class="col-md-2 text-center">
+                <i class="fa-solid fa-heart text-primary fa-3x p-3"></i>
               </div>
-              <div class="col-md-9">
+              <div class="col-md-10">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Help center</h5>
                   <p class="card-text">Online documentation for (almost everything) ProudCity.</p>
@@ -219,10 +211,10 @@ permalink: /dashboard/
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
           <div class="card mb-3">
             <div class="row g-0">
-              <div class="col-md-3 text-center">
-                <i class="fa-solid fa-ticket text-primary fa-5x p-3"></i>
+              <div class="col-md-2 text-center">
+                <i class="fa-solid fa-ticket text-primary fa-3x p-3"></i>
               </div>
-              <div class="col-md-9">
+              <div class="col-md-10">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Support</h5>
                   <p class="card-text">Can't find your answer in the help center?</p>
@@ -240,7 +232,7 @@ permalink: /dashboard/
   </div>
   <div class="row">
     <div class="col-12">
-      <h2 class="fw-bold h3 mb-3">Share</h2>
+      <h2 class="fw-bold h4 mb-3">Share</h2>
     </div>
   </div>
   <div class="row">
@@ -248,10 +240,10 @@ permalink: /dashboard/
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-stretch">
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-3 text-center">
-              <i class="fa-solid fa-share text-primary fa-5x p-3"></i>
+            <div class="col-md-2 text-center">
+              <i class="fa-solid fa-share text-primary fa-3x p-3"></i>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10">
               <div class="card-body">
                 <h5 class="card-title fw-bold">Share</h5>
                 <p class="card-text">Our primary source of new business is through word of mouth and referrals. We appreciate any support you can give us by sharing ProudCity to your network.
