--- a/_pages/development.html
+++ b/_pages/development.html
@@ -17,7 +17,7 @@ permalink: /development/
         <h2 class="h3 fw-bold">Sponsor new features/enhancements ✨</h2>
         <p>Do you have financial resources you'd like to use to build a new feature or enhancement for the ProudCity Network?</p>
         <p>
-          <a href="#" class="btn btn-primary">Contact us</a>
+          <a href="#" class="btn btn-primary text-white">Contact us</a>
         </p>
       </div>
     </div>
